[tool.poetry]
name = "real-estate-toolkit"
version = "0.1.0"
description = ""
authors = ["Kiki Xie He <kiki.xie01@estudiant.upf.edu>, Jiaxin Ye <jiaxin.ye01@estudiant.upf.edu>, Eric Montilla Bergua <eric.montilla01@estudiant.upf.edu>, Steven Abata Guadamud <steveneddyl.abata01@estudiant.upf.edu>"]
readme = "README.md"
packages = [{include = "real_estate_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
polars = "^1.13.1"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
